Liens EN ajouté

--- a/en/index.html
+++ b/en/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="/index.html" class="logo">
+        <a href="/en/index.html" class="logo">
             <img src="/assets/icons/Logo.svg" alt="Logo Chronova" loading="lazy" />
             <span class="logo-text">Chronova</span>
         </a>
@@ -43,17 +43,17 @@
         </div>
         <nav class="nav" aria-label="Navigation principale">
             <ul class="nav-list">
-                <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein: The Researcher</a></li>
+                <li><a href="/en/history.html" class="nav-link">Mileva Einstein: The Researcher</a></li>
                 <hr>
-                <li><a href="/fr/effet-matilda.html" class="nav-link">Matilda Effect</a></li>
+                <li><a href="/en/matilda-effect.html" class="nav-link">Matilda Effect</a></li>
                 <hr>
-                <li><a href="/fr/article.html" class="nav-link">Women in Science</a></li>
+                <li><a href="/en/article.html" class="nav-link">Women in Science</a></li>
                 <hr>
-                <li><a href="/fr/theorie.html" class="nav-link">Space-Time & Speed of Light</a></li>
+                <li><a href="/en/theory.html" class="nav-link">Space-Time & Speed of Light</a></li>
                 <hr>
-                <li><a href="/fr/livre.html" class="nav-link">Space-Time, Jean-Paul Auffray</a></li>
+                <li><a href="/en/book.html" class="nav-link">Space-Time, Jean-Paul Auffray</a></li>
                 <hr>
-                <li><a href="/fr/film.html" class="nav-link">Back to the Future</a></li>
+                <li><a href="/en/movie.html" class="nav-link">Back to the Future</a></li>
             </ul>
         </nav>
     </header>
@@ -66,7 +66,7 @@
             <h1 class="title">Mileva Einstein</h1>
             <p class="subtitle">Physicist & Mathematician</p>
             <p class="description">Discover the story of Mileva Marić Einstein, a brilliant physicist whose scientific contributions were long overshadowed by her husband, Albert Einstein.</p>
-            <a href="/fr/histoire.html" class="cta-button">Discover her story <img src="assets/icons/fleche_bas.svg" alt="" loading="lazy" /></a>
+            <a href="/en/history.html" class="cta-button">Discover her story <img src="/assets/icons/fleche_bas.svg" alt="" loading="lazy" /></a>
         </section>
 
         <p class="section-separator">∑∫∂∇π∞</p>
@@ -74,22 +74,22 @@
         <section class="discover">
             <h2 class="section-title">• Explore •</h2>
             <div class="cards-container">
-                <a href="/fr/article.html" class="card">
-                    <img src="assets/icons/article.svg" alt="Article" loading="lazy" />
+                <a href="/en/article.html" class="card">
+                    <img src="/assets/icons/article.svg" alt="Article" loading="lazy" />
                     <h3 class="card-title">Women in Science in Literature</h3>
                     <p>How women scientists are represented in literature and why their contributions have been downplayed.</p>
-                    <p class="card-button">Read the article <img src="assets/icons/fleche.svg" alt="" loading="lazy" /></p>
+                    <p class="card-button">Read the article <img src="/assets/icons/fleche.svg" alt="" loading="lazy" /></p>
                 </a>
-                <a href="/fr/livre.html" class="card">
-                    <img src="assets/icons/livre.svg" alt="Livre" loading="lazy" />
+                <a href="/en/book.html" class="card">
+                    <img src="/assets/icons/livre.svg" alt="Livre" loading="lazy" />
                     <h3 class="card-title">Space-Time by Jean-Paul Auffray</h3>
                     <p>Discover "Space-Time" by Jean-Paul Auffray, a popular science book that explores the fundamental concepts of relativity and highlights Mileva Einstein's contributions.</p>
-                    <p class="card-button">Read the article <img src="assets/icons/fleche.svg" alt="" loading="lazy" /></p>
+                    <p class="card-button">Read the article <img src="/assets/icons/fleche.svg" alt="" loading="lazy" /></p>
                 </a>
-                <a href="/fr/film.html" class="card">
-                    <img src="assets/img/film.avif"  class="future" alt="Film" loading="lazy" />
+                <a href="/en/movie.html" class="card">
+                    <img src="/assets/img/film.avif"  class="future" alt="Film" loading="lazy" />
                     <h3 class="card-title">Back to the Future</h3>
-                    <p class="card-date"><img src="assets/icons/calendrier.svg" alt="Calendar" loading="lazy" /> 1985 - Director: Robert Zemeckis</p>
+                    <p class="card-date"><img src="/assets/icons/calendrier.svg" alt="Calendar" loading="lazy" /> 1985 - Director: Robert Zemeckis</p>
                     <p>Iconic film about time travel that explores concepts of relativity, temporal paradoxes, and the impact of the past on the future. A great starting point to discuss the physics of time and space.</p>
                 </a>
             </div>
@@ -98,12 +98,12 @@
         <section class="content">
             <h2 class="content-title">Space-Time & Light</h2>
             <p class="content-description">Mileva Einstein's work on special relativity revolutionized our understanding of the universe, unifying space and time into a single mathematical structure.</p>
-            <a href="/fr/theorie.html" class="information">Learn more <img src="assets/icons/fleche.svg" alt="" loading="lazy" /></a>
+            <a href="/en/theory.html" class="information">Learn more <img src="/assets/icons/fleche.svg" alt="" loading="lazy" /></a>
         </section>
     </main>
     <footer class="footer">
         <div class="footer-content">
-            <a href="/index.html" class="footer-logo" aria-label="Retour à l'accueil">
+            <a href="/en/index.html" class="footer-logo" aria-label="Retour à l'accueil">
                 <img src="/assets/icons/Logo.svg" alt="Logo Chronova" loading="lazy" />
                 <p>Chronova</p>
             </a>
@@ -111,10 +111,10 @@
             <nav class="footer-nav" aria-label="Navigation du footer">
                 <p class="footer-nav-title">Useful links</p>
                 <ul class="footer-nav-list">
-                    <li><a href="/fr/a-propos.html" class="footer-nav-link">About</a></li>
-                    <li><a href="/" class="footer-nav-link">Legal notice</a></li>
-                    <li><a href="/fr/glossaire.html" class="footer-nav-link">Glossary</a></li>
-                    <li><a href="/fr/contact.html" class="footer-nav-link">Contact</a></li>
+                    <li><a href="/en/about.html" class="footer-nav-link">About</a></li>
+                    <li><a href="/en/" class="footer-nav-link">Legal notice</a></li>
+                    <li><a href="/en/glossary.html" class="footer-nav-link">Glossary</a></li>
+                    <li><a href="/en/contact.html" class="footer-nav-link">Contact</a></li>
                 </ul>
             </nav>
         </div>
