--- a/en/movie.html
+++ b/en/movie.html
@@ -28,7 +28,7 @@
 
 <body>
     <header class="header">
-        <a href="/index.html" class="logo">
+        <a href="/en/index.html" class="logo">
             <img src="/assets/icons/Logo.svg" alt="Logo Chronova" loading="lazy" />
             <span class="logo-text">Chronova</span>
         </a>
@@ -45,24 +45,24 @@
         </div>
         <nav class="nav" aria-label="Navigation principale">
             <ul class="nav-list">
-                <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein: The Researcher</a></li>
+                <li><a href="/en/history.html" class="nav-link">Mileva Einstein: The Researcher</a></li>
                 <hr>
-                <li><a href="/fr/effet-matilda.html" class="nav-link">Matilda Effect</a></li>
+                <li><a href="/en/matilda-effect.html" class="nav-link">Matilda Effect</a></li>
                 <hr>
-                <li><a href="/fr/article.html" class="nav-link">Women in Science</a></li>
+                <li><a href="/en/article.html" class="nav-link">Women in Science</a></li>
                 <hr>
-                <li><a href="/fr/theorie.html" class="nav-link">Space-Time & Speed of Light</a></li>
+                <li><a href="/en/theory.html" class="nav-link">Space-Time & Speed of Light</a></li>
                 <hr>
-                <li><a href="/fr/livre.html" class="nav-link">Space-Time, Jean-Paul Auffray</a></li>
+                <li><a href="/en/book.html" class="nav-link">Space-Time, Jean-Paul Auffray</a></li>
                 <hr>
-                <li><a href="/fr/film.html" class="nav-link">Back to the Future</a></li>
+                <li><a href="/en/movie.html" class="nav-link">Back to the Future</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <div class="hero has-button">
-            <a href="/index.html" class="hero-button" aria-label="Retour à l'accueil">
+            <a href="/en/index.html" class="hero-button" aria-label="Retour à l'accueil">
                 <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" /> Back to Home
             </a>
             <img src="/assets/img/movie.avif" class="mileva" loading="lazy" />
@@ -138,7 +138,7 @@
 
     <footer class="footer">
         <div class="footer-content">
-            <a href="/index.html" class="footer-logo" aria-label="Retour à l'accueil">
+            <a href="/en/index.html" class="footer-logo" aria-label="Retour à l'accueil">
                 <img src="/assets/icons/Logo.svg" alt="Logo Chronova" loading="lazy" />
                 <p>Chronova</p>
             </a>
@@ -146,10 +146,10 @@
             <nav class="footer-nav" aria-label="Navigation du footer">
                 <p class="footer-nav-title">Useful links</p>
                 <ul class="footer-nav-list">
-                    <li><a href="/fr/a-propos.html" class="footer-nav-link">About</a></li>
-                    <li><a href="/" class="footer-nav-link">Legal notice</a></li>
-                    <li><a href="/fr/glossaire.html" class="footer-nav-link">Glossaire</a></li>
-                    <li><a href="/fr/contact.html" class="footer-nav-link">Contact</a></li>
+                    <li><a href="/en/about.html" class="footer-nav-link">About</a></li>
+                    <li><a href="/en/" class="footer-nav-link">Legal notice</a></li>
+                    <li><a href="/en/glossary.html" class="footer-nav-link">Glossaire</a></li>
+                    <li><a href="/en/contact.html" class="footer-nav-link">Contact</a></li>
                 </ul>
             </nav>
         </div>
