--- a/en/index.html
+++ b/en/index.html
@@ -31,10 +31,10 @@
             <span class="logo-text">Chronova</span>
         </a>
         <div class="header-actions">
-            <button class="lang-switch" aria-label="Changer la langue du site">
+            <a href="/index.html" class="lang-switch" aria-label="Changer la langue du site">
                 <img src="/assets/icons/Globe.svg" alt="Icône de globe" loading="lazy" />
                 <span class="lang-label">EN</span>
-            </button>
+            </a>
         <button class="menu-toggle" aria-label="Menu de navigation" aria-expanded="false">
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
