--- a/fr/effet-matilda.html
+++ b/fr/effet-matilda.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="">
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,10 +32,10 @@
             <span class="logo-text">Chronova</span>
         </a>
         <div class="header-actions">
-            <button class="lang-switch" aria-label="Changer la langue du site">
+            <a href="/en/matilda-effect.html" class="lang-switch" aria-label="Changer la langue du site">
                 <img src="/assets/icons/Globe.svg" alt="Icône de globe" loading="lazy" />
                 <span class="lang-label">FR</span>
-            </button>
+            </a>
         <button class="menu-toggle" aria-label="Menu de navigation" aria-expanded="false">
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
