--- a/fr/index.html
+++ b/fr/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="/index.html" class="logo">
+        <a href="/fr/index.html" class="logo">
             <img src="/assets/icons/Logo.svg" alt="Logo Chronova" loading="lazy" />
             <span class="logo-text">Chronova</span>
         </a>
@@ -66,7 +66,7 @@
             <h1 class="title">Mileva Einstein</h1>
             <p class="subtitle">Physicienne & Mathématicienne</p>
             <p class="description">Découvrez l'histoire de Mileva Marić Einstein, une brillante physicienne dont les contributions scientifiques ont longtemps été occultées par l'ombre de son mari, Albert Einstein.</p>
-            <a href="/fr/histoire.html" class="cta-button">Découvrir son histoire <img src="assets/icons/fleche_bas.svg" alt="" loading="lazy" /></a>
+            <a href="/fr/histoire.html" class="cta-button">Découvrir son histoire <img src="/assets/icons/fleche_bas.svg" alt="" loading="lazy" /></a>
         </section>
 
         <p class="section-separator">∑∫∂∇π∞</p>
@@ -75,21 +75,21 @@
             <h2 class="section-title">• Explorer •</h2>
             <div class="cards-container">
                 <a href="/fr/article.html" class="card">
-                    <img src="assets/icons/article.svg" alt="Article" loading="lazy" />
+                    <img src="/assets/icons/article.svg" alt="Article" loading="lazy" />
                     <h3 class="card-title">Les Femmes de Sciences dans la Littérature</h3>
                     <p>Comment les femmes de science sont représentées dans la littérature et pourquoi leurs contributions ont été minimisées.</p>
-                    <p class="card-button">Lire l'article <img src="assets/icons/fleche.svg" alt="" loading="lazy" /></p>
+                    <p class="card-button">Lire l'article <img src="/assets/icons/fleche.svg" alt="" loading="lazy" /></p>
                 </a>
                 <a href="/fr/livre.html" class="card">
-                    <img src="assets/icons/livre.svg" alt="Livre" loading="lazy" />
+                    <img src="/assets/icons/livre.svg" alt="Livre" loading="lazy" />
                     <h3 class="card-title">L'Espace-Temps de Jean-Paul Auffray</h3>
                     <p>Découvrez "L'Espace-Temps" de Jean-Paul Auffray, un ouvrage de vulgarisation scientifique qui explore les concepts fondamentaux de la relativité et met en lumière les contributions de Mileva Einstein.</p>
-                    <p class="card-button">Lire l'article <img src="assets/icons/fleche.svg" alt="" loading="lazy" /></p>
+                    <p class="card-button">Lire l'article <img src="/assets/icons/fleche.svg" alt="" loading="lazy" /></p>
                 </a>
                 <a href="/fr/film.html" class="card">
-                    <img src="assets/img/film.avif"  class="future" alt="Film" loading="lazy" />
+                    <img src="/assets/img/film.avif"  class="future" alt="Film" loading="lazy" />
                     <h3 class="card-title">Retour vers le Futur</h3>
-                    <p class="card-date"><img src="assets/icons/calendrier.svg" alt="Calendrier" loading="lazy" /> 1985 - Réalisateur : Robert Zemeckis</p>
+                    <p class="card-date"><img src="/assets/icons/calendrier.svg" alt="Calendrier" loading="lazy" /> 1985 - Réalisateur : Robert Zemeckis</p>
                     <p>Film emblématique sur le voyage dans le temps qui explore les concepts de relativité, de paradoxes temporels et l'impact du passé sur le futur. Un outil parfait pour discuter de la physique du temps et de l'espace.</p>
                 </a>
             </div>
@@ -98,12 +98,12 @@
         <section class="content">
             <h2 class="content-title">L'Espace-Temps & La Lumière</h2>
             <p class="content-description">Les travaux de Mileva Einstein sur la relativité restreinte ont révolutionné notre compréhension de l'univers, unifiant l'espace et le temps en une seule structure mathématique.</p>
-            <a href="/fr/theorie.html" class="information">En savoir plus <img src="assets/icons/fleche.svg" alt="" loading="lazy" /></a>
+            <a href="/fr/theorie.html" class="information">En savoir plus <img src="/assets/icons/fleche.svg" alt="" loading="lazy" /></a>
         </section>
     </main>
     <footer class="footer">
         <div class="footer-content">
-            <a href="/index.html" class="footer-logo" aria-label="Retour à l'accueil">
+            <a href="/fr/index.html" class="footer-logo" aria-label="Retour à l'accueil">
                 <img src="/assets/icons/Logo.svg" alt="Logo Chronova" loading="lazy" />
                 <p>Chronova</p>
             </a>
