--- a/fr/theorie.html
+++ b/fr/theorie.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="/index.html" class="logo">
+        <a href="/fr/index.html" class="logo">
             <img src="/assets/icons/Logo.svg" alt="Logo Chronova" loading="lazy" />
             <span class="logo-text">Chronova</span>
         </a>
@@ -60,7 +60,7 @@
 
     <main>
         <div class="hero has-button">
-            <a href="/index.html" class="hero-button" aria-label="Retour à l'accueil">
+            <a href="/fr/index.html" class="hero-button" aria-label="Retour à l'accueil">
                 <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" /> Retour à l'accueil
             </a>
             <img src="/assets/img/science.avif" class="mileva" loading="lazy" />
@@ -150,7 +150,7 @@
 
     <footer class="footer">
         <div class="footer-content">
-            <a href="/index.html" class="footer-logo" aria-label="Retour à l'accueil">
+            <a href="/fr/index.html" class="footer-logo" aria-label="Retour à l'accueil">
                 <img src="/assets/icons/Logo.svg" alt="Logo Chronova" loading="lazy" />
                 <p>Chronova</p>
             </a>
