--- a/en/about.html
+++ b/en/about.html
@@ -89,16 +89,50 @@
             </p>
         </section>
 
-        <section class="content">
+        <section class="projects-section">
             <h2 class="content-title">Other projects</h2>
-            <div class="project-container">
-                <img src="/assets/img/project1.avif" alt="Illustration carte 1" class="project-img" />
-                <h3 class="card-title">Anning Coast</h3>
-                <div class="project-item">
+            
+            <a href="http://etoiles-oubliees.lilian-maitre.fr/fr/" target="_blank" rel="noopener" class="project-card">
+                    <img src="/assets/icons/logo_etoile_oubliees.svg"  class="project" alt="" loading="lazy" />
+                    <h3 class="project-title">Étoiles Oubliées</h3>
+                    <hr >
+                    <p>Maitre Lilian</p>
+                </a>
+                
+                <a href="http://radiance.alex-ringenbach.fr" target="_blank" rel="noopener" class="project-card">
+                    <img src="/assets/icons/logo_radiance.svg"  class="project" alt="" loading="lazy" />
+                    <h3 class="project-title">Radiance</h3>
                     <hr>
-                    <p class="project-description">Menigoz Ewan</p>
-                </div>
-            </div>
+                    <p>Alex Ringenbach</p>
+                </a>
+
+                <a href="https://empreinte.yanischouhib.fr/fr/" target="_blank" rel="noopener" class="project-card">
+                    <img src="/assets/icons/logo_empreinte.svg"  class="project" alt="" loading="lazy" />
+                    <h3 class="project-title">Empreinte</h3>
+                    <hr>
+                    <p>Yanis Chouhib</p>
+                </a>
+
+                <a href="https://jocelynbell.netlify.app/fr/" target="_blank" rel="noopener" class="project-card">
+                    <img src="/assets/icons/logo_Jocelyn_Bell.svg"  class="project" alt="" loading="lazy" />
+                    <h3 class="project-title">Jocelyn Bell</h3>
+                    <hr>
+                    <p>Estelle Coulon</p>
+                </a>
+
+                <a href="https://devlace.pierre-mouilleseaux-lhuillier.fr/fr/" target="_blank" rel="noopener" class="project-card">
+                    <img src="/assets/icons/logo_devlace.svg"  class="project" alt="" loading="lazy" />
+                    <h3 class="project-title">Devlace</h3>
+                    <hr>
+                    <p>Pierre Mouilleseaux Lhuillier</p>
+                </a>
+
+                <a href="https://ada.virgile-esnaux.fr/" target="_blank" rel="noopener" class="project-card">
+                    <img src="/assets/icons/logo_ada.svg"  class="project" alt="" loading="lazy" />
+                    <h3 class="project-title">ADA</h3>
+                    <hr>
+                    <p>Esnaux Virgile</p>
+                </a>
         </section>
 
     </main>
