Corriger le code

--- a/en/movie.html
+++ b/en/movie.html
@@ -148,7 +148,7 @@
                 <ul class="footer-nav-list">
                     <li><a href="/en/about.html" class="footer-nav-link">About</a></li>
                     <li><a href="/en/" class="footer-nav-link">Legal notice</a></li>
-                    <li><a href="/en/glossary.html" class="footer-nav-link">Glossaire</a></li>
+                    <li><a href="/en/glossary.html" class="footer-nav-link">Glossary</a></li>
                     <li><a href="/en/contact.html" class="footer-nav-link">Contact</a></li>
                 </ul>
             </nav>
