--- a/fr/theorie.html
+++ b/fr/theorie.html
@@ -118,7 +118,7 @@
                 </div>
             </div>
 
-            <img src="/assets/img/vitessedelalumière.avif" class="article-image" loading="lazy" />
+            <img src="/assets/img/lumiere.avif" class="article-image" loading="lazy" />
 
             <div class="cards-container">
                 <div class="card">
