--- a/en/movie.html
+++ b/en/movie.html
@@ -78,7 +78,7 @@
             <h2 class="article-title">Trailer</h2>
             <div class="video-container">
                 <video id="myVideo" controls>
-                    <source src="/assets/video/Bande-annonce.mp4" type="video/mp4" />
+                    <source src="/assets/video/Trailer.mp4" type="video/mp4" />
                 </video>
             </div>
         </section>
