--- a/fr/a-propos.html
+++ b/fr/a-propos.html
@@ -92,46 +92,67 @@
         <section class="projects-section">
             <h2 class="content-title">Autres projets</h2>
             
-            <a href="http://etoiles-oubliees.lilian-maitre.fr/fr/" target="_blank" rel="noopener" class="project-card">
+            <a href="http://etoiles-oubliees.lilian-maitre.fr/en/" target="_blank" rel="noopener" class="project-card">
                     <img src="/assets/icons/logo_etoile_oubliees.svg"  class="project" alt="" loading="lazy" />
                     <h3 class="project-title">Étoiles Oubliées</h3>
                     <hr >
                     <p>Maitre Lilian</p>
                 </a>
                 
-                <a href="http://radiance.alex-ringenbach.fr" target="_blank" rel="noopener" class="project-card">
+                <a href="https://phenomenal-pie-f99bc4.netlify.app/en/" target="_blank" rel="noopener" class="project-card">
                     <img src="/assets/icons/logo_radiance.svg"  class="project" alt="" loading="lazy" />
                     <h3 class="project-title">Radiance</h3>
                     <hr>
                     <p>Alex Ringenbach</p>
                 </a>
 
-                <a href="https://empreinte.yanischouhib.fr/fr/" target="_blank" rel="noopener" class="project-card">
+                <a href="https://empreinte.yanischouhib.fr/en/" target="_blank" rel="noopener" class="project-card">
                     <img src="/assets/icons/logo_empreinte.svg"  class="project" alt="" loading="lazy" />
                     <h3 class="project-title">Empreinte</h3>
                     <hr>
                     <p>Yanis Chouhib</p>
                 </a>
 
-                <a href="https://jocelynbell.netlify.app/fr/" target="_blank" rel="noopener" class="project-card">
+                <a href="https://jocelynbell.netlify.app/en/index-en" target="_blank" rel="noopener" class="project-card">
                     <img src="/assets/icons/logo_Jocelyn_Bell.svg"  class="project" alt="" loading="lazy" />
                     <h3 class="project-title">Jocelyn Bell</h3>
                     <hr>
                     <p>Estelle Coulon</p>
                 </a>
 
-                <a href="https://devlace.pierre-mouilleseaux-lhuillier.fr/fr/" target="_blank" rel="noopener" class="project-card">
+                <a href="https://devlace.pierre-mouilleseaux-lhuillier.fr/en/" target="_blank" rel="noopener" class="project-card">
                     <img src="/assets/icons/logo_devlace.svg"  class="project" alt="" loading="lazy" />
                     <h3 class="project-title">Devlace</h3>
                     <hr>
                     <p>Pierre Mouilleseaux Lhuillier</p>
                 </a>
 
-                <a href="https://ada.virgile-esnaux.fr/" target="_blank" rel="noopener" class="project-card">
+                <a href="https://projet-effetmatilda.netlify.app/en/" target="_blank" rel="noopener" class="project-card">
                     <img src="/assets/icons/logo_ada.svg"  class="project" alt="" loading="lazy" />
                     <h3 class="project-title">ADA</h3>
                     <hr>
                     <p>Esnaux Virgile</p>
+                </a>
+
+                <a href="https://illustrious-twilight-b79ac1.netlify.app/en/" target="_blank" rel="noopener" class="project-card">
+                    <img src="/assets/icons/logo_aqita.svg"  class="project" alt="" loading="lazy" />
+                    <h3 class="project-title">AQITA</h3>
+                    <hr>
+                    <p>Melvyn Philippon</p>
+                </a>
+
+                <a href="http://meurdrac.ines-sittler.fr/" target="_blank" rel="noopener" class="project-card">
+                    <img src="/assets/img/logo_meurdrac.avif"  class="project" alt="" loading="lazy" />
+                    <h3 class="project-title">Meurdrac</h3>
+                    <hr>
+                    <p>Inès Sittler</p>
+                </a>
+
+                <a href="http://meurdrac.ines-sittler.fr/" target="_blank" rel="noopener" class="project-card">
+                    <img src="/assets/img/logo_meurdrac.avif"  class="project" alt="" loading="lazy" />
+                    <h3 class="project-title">Meurdrac</h3>
+                    <hr>
+                    <p>Maman Thilor</p>
                 </a>
         </section>
 
