--- a/fr/article.html
+++ b/fr/article.html
@@ -131,31 +131,31 @@
             </p>
 
             <div class="timeline-container">
-                <h3 class="timeline-title">Mileva Einstein</h3>
+                <h3 class="timeline-title"><a href="https://fr.wikipedia.org/wiki/Mileva_Einstein" target="_blank" rel="noopener">Mileva Einstein</a></h3>
                 <div class="timeline-item">
                     <span class="timeline-year">Physique théorique - 1905</span>
                     <p class="timeline-description">Relativité restreinte</p>
                 </div>
 
-                <h3 class="timeline-title">Lise Meitner</h3>
+                <h3 class="timeline-title"><a href="https://fr.wikipedia.org/wiki/Lise_Meitner" target="_blank" rel="noopener">Lise Meitner</a></h3>
                 <div class="timeline-item">
                     <span class="timeline-year">Physique nucléaire - 1938</span>
                     <p class="timeline-description">Fission nucléaire</p>
                 </div>
 
-                <h3 class="timeline-title">Rosalind Franklin</h3>
+                <h3 class="timeline-title"><a href="https://fr.wikipedia.org/wiki/Rosalind_Franklin" target="_blank" rel="noopener">Rosalind Franklin</a></h3>
                 <div class="timeline-item">
                     <span class="timeline-year">Cristallographie - 1952</span>
                     <p class="timeline-description">Structure de l'ADN</p>
                 </div>
 
-                <h3 class="timeline-title">Chien-Shiung Wu</h3>
+                <h3 class="timeline-title"><a href="https://fr.wikipedia.org/wiki/Chien-Shiung_Wu" target="_blank" rel="noopener">Chien-Shiung Wu</a></h3>
                 <div class="timeline-item">
                     <span class="timeline-year">Physique expérimentale - 1956</span>
                     <p class="timeline-description">Parité en physique</p>
                 </div>
 
-                <h3 class="timeline-title">Jocelyn Bell Burnell</h3>
+                <h3 class="timeline-title"><a href="https://fr.wikipedia.org/wiki/Jocelyn_Bell_Burnell" target="_blank" rel="noopener">Jocelyn Bell Burnell</a></h3>
                 <div class="timeline-item">
                     <span class="timeline-year">Astrophysique - 1967</span>
                     <p class="timeline-description">Pulsars</p>
