--- a/en/about.html
+++ b/en/about.html
@@ -133,6 +133,27 @@
                     <hr>
                     <p>Esnaux Virgile</p>
                 </a>
+
+                <a href="https://illustrious-twilight-b79ac1.netlify.app/en/" target="_blank" rel="noopener" class="project-card">
+                    <img src="/assets/icons/logo_aqita.svg"  class="project" alt="" loading="lazy" />
+                    <h3 class="project-title">AQITA</h3>
+                    <hr>
+                    <p>Melvyn Philippon</p>
+                </a>
+
+                <a href="http://meurdrac.ines-sittler.fr/" target="_blank" rel="noopener" class="project-card">
+                    <img src="/assets/img/logo_meurdrac.avif"  class="project" alt="" loading="lazy" />
+                    <h3 class="project-title">Meurdrac</h3>
+                    <hr>
+                    <p>Inès Sittler</p>
+                </a>
+
+                <a href="https://iridescent-llama-dfa706.netlify.app/fr/" target="_blank" rel="noopener" class="project-card">
+                    <img src="/assets/icons/logo_empreinte_feminine.svg"  class="project" alt="" loading="lazy" />
+                    <h3 class="project-title">Empreintes invisibles de la science</h3>
+                    <hr>
+                    <p>Maman Thilor Sambe</p>
+                </a>
         </section>
 
     </main>
