--- a/fr/a-propos.html
+++ b/fr/a-propos.html
@@ -148,11 +148,11 @@
                     <p>Inès Sittler</p>
                 </a>
 
-                <a href="http://meurdrac.ines-sittler.fr/" target="_blank" rel="noopener" class="project-card">
-                    <img src="/assets/img/logo_meurdrac.avif"  class="project" alt="" loading="lazy" />
-                    <h3 class="project-title">Meurdrac</h3>
+                <a href="https://iridescent-llama-dfa706.netlify.app/en/" target="_blank" rel="noopener" class="project-card">
+                    <img src="/assets/icons/logo_empreinte_feminine.svg"  class="project" alt="" loading="lazy" />
+                    <h3 class="project-title">Empreintes invisibles de la science</h3>
                     <hr>
-                    <p>Maman Thilor</p>
+                    <p>Maman Thilor Sambe</p>
                 </a>
         </section>
 
